--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,8 +1,13 @@
+body {
+    background-color: #195656;
+}
+
+
 .container {
     max-width: 800px;
-    margin: 0 auto;
+    margin: 20px auto;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #58c5bf;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
@@ -16,9 +21,10 @@
 }
 
 .searchInput, .addTodo {
-    width: 100%;
+    width: 96%;
     padding: 10px;
     margin-bottom: 15px;
+    margin-right: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
